--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ resolver = "2"
 rust-version = "1.66"
 
 [profile.release]
+debug = true
 opt-level = "s"
 
 [profile.dev]
@@ -28,11 +29,23 @@ experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
 embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]
 
 [dependencies]
+anyhow = "1.0.44"
 log = { version = "0.4.17", default-features = false }
 esp-idf-sys = { version = "0.33", default-features = false }
 esp-idf-hal = { version = "0.41", optional = true, default-features = false }
 esp-idf-svc = { version = "0.46", optional = true, default-features = false }
 embedded-svc = { version = "0.25", optional = true, default-features = false }
+
+[[package.metadata.esp-idf-sys.extra_components]]
+component_dirs = ["external/memfault-firmware-sdk/ports/esp_idf/memfault"]
+bindings_header = "bindings.h"
+bindings_module = "memfault"
+
+[package.metadata.espflash]
+partition_table = "partitions.csv"
+
+# [package.metadata.esp-idf-sys]
+# esp_idf_components = ["esp_http_client", "esp_adc"]
 
 [build-dependencies]
 embuild = "0.31.2"
