--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,19 @@ resolver = "2"
 rust-version = "1.66"
 
 [profile.release]
+# Make sure debug symbols are enabled for release builds. They are needed for
+# Memfault to symbolicate coredumps, and they don't affect the size of the
+# binary on flash.
 debug = true
 opt-level = "s"
 
 [profile.dev]
-debug = true    # Symbols are nice and they don't increase the size on Flash
+debug = true
 opt-level = "z"
 
 [features]
 
 default = ["std", "hal", "esp-idf-sys/native"]
-
 
 pio = ["esp-idf-sys/pio"]
 all = ["std", "nightly", "experimental", "embassy"]
@@ -36,17 +38,18 @@ esp-idf-hal = { version = "0.41", optional = true, default-features = false }
 esp-idf-svc = { version = "0.46", optional = true, default-features = false }
 embedded-svc = { version = "0.25", optional = true, default-features = false }
 
+# Add Memfault as an external component
 [[package.metadata.esp-idf-sys.extra_components]]
 component_dirs = ["external/memfault-firmware-sdk/ports/esp_idf/memfault"]
 bindings_header = "bindings.h"
 bindings_module = "memfault"
 
+# Add partition table. The coredump partition is required for Memfault
+# coredumps to work properly.
 [package.metadata.espflash]
 partition_table = "partitions.csv"
-
-# [package.metadata.esp-idf-sys]
-# esp_idf_components = ["esp_http_client", "esp_adc"]
 
 [build-dependencies]
 embuild = "0.31.2"
 cmake = "0.1"
+
